// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`InventoryFormModal — KEN Enterprise Compliance > matches snapshot (edit mode) 1`] = `
<div
  class="fixed inset-0 z-[100] flex items-center justify-center p-4 bg-zinc-950/80 backdrop-blur-md"
>
  <div
    class="transition-all text-[var(--text-primary)] w-full max-w-[1200px] max-h-[95vh] rounded-lg bg-card border border-zinc-200/80 dark:border-zinc-800/50 shadow-2xl flex flex-col animate-in fade-in zoom-in-95 duration-300"
  >
    <div
      class="flex items-center justify-between px-8 py-4 border-b border-zinc-200/80 dark:border-zinc-800/50 bg-card/80"
    >
      <div
        class="flex items-center gap-4"
      >
        <div
          class="flex h-10 w-10 items-center justify-center rounded-lg bg-amber-500 text-white dark:text-zinc-900 shadow-lg shadow-amber-500/20"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-package"
            fill="none"
            height="20"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11 21.73a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73z"
            />
            <path
              d="M12 22V12"
            />
            <polyline
              points="3.29 7 12 12 20.71 7"
            />
            <path
              d="m7.5 4.27 9 5.15"
            />
          </svg>
        </div>
        <div>
          <h3
            class="text-lg font-black uppercase tracking-tighter text-foreground"
          >
            Update Master Registry
          </h3>
          <p
            class="text-xs uppercase tracking-widest font-black text-amber-600 dark:text-amber-500"
          >
            Material definition & conversion matrix
          </p>
        </div>
      </div>
      <button
        class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium uppercase tracking-widest transition-all duration-300 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-amber-500/20 disabled:pointer-events-none disabled:opacity-50 disabled:bg-zinc-200 dark:disabled:bg-zinc-700 active:scale-95 h-8 w-8 rounded-full text-zinc-500 hover:text-zinc-900 dark:text-zinc-400 dark:hover:text-white hover:bg-zinc-100 dark:hover:bg-zinc-800"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-x"
          fill="none"
          height="20"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 6 6 18"
          />
          <path
            d="m6 6 12 12"
          />
        </svg>
      </button>
    </div>
    <div
      class="p-8 space-y-6 overflow-y-auto custom-scrollbar"
    >
      <div
        class="grid grid-cols-12 gap-8"
      >
        <div
          class="col-span-8 space-y-10"
        >
          <div
            class="grid grid-cols-3 gap-6"
          >
            <div
              class="space-y-2"
            >
              <label
                class="text-xs font-black uppercase tracking-wide text-zinc-500 dark:text-zinc-400 ml-1"
              >
                Nama Bahan *
              </label>
              <div
                class="w-full"
              >
                <input
                  class="flex w-full border dark:bg-zinc-800 px-4 py-2 text-sm font-sans dark:text-zinc-100 shadow-sm transition-all dark:placeholder:text-zinc-500 focus-visible:outline-none focus-visible:ring-4 focus-visible:ring-amber-500/20 disabled:cursor-not-allowed disabled:opacity-50 focus-visible:border-amber-500 h-12 bg-card border-zinc-200 dark:border-zinc-700 rounded-md text-foreground placeholder:text-zinc-400"
                  placeholder="Input name..."
                  value="Kopi Robusta"
                />
              </div>
            </div>
            <div
              class="space-y-2"
            >
              <label
                class="text-xs font-black uppercase tracking-wide text-zinc-500 dark:text-zinc-400 ml-1"
              >
                Kategori
              </label>
              <select
                class="h-12 w-full rounded-md border border-zinc-200 dark:border-zinc-700 bg-card px-4 text-xs font-black text-zinc-800 dark:text-zinc-200"
              >
                <option
                  value="Bahan Baku"
                >
                  Bahan Baku
                </option>
                <option
                  value="Minuman"
                >
                  Minuman
                </option>
                <option
                  value="Makanan"
                >
                  Makanan
                </option>
                <option
                  value="Kemasan"
                >
                  Kemasan
                </option>
                <option
                  value="Lainnya"
                >
                  Lainnya
                </option>
              </select>
            </div>
            <div
              class="space-y-2"
            >
              <label
                class="text-xs font-black uppercase tracking-wide text-amber-600 dark:text-amber-500 ml-1"
              >
                Pemasok Strategis
              </label>
              <select
                class="h-12 w-full rounded-md border border-zinc-200 dark:border-zinc-700 bg-card px-4 text-xs font-black text-zinc-800 dark:text-zinc-200"
              >
                <option
                  value=""
                >
                  Pilih Supplier...
                </option>
                <option
                  value="sup-1"
                >
                  PT Kopi Nusantara
                </option>
              </select>
            </div>
          </div>
          <div
            class="p-6 bg-card/40 rounded-lg border border-zinc-200/80 dark:border-zinc-800/80 shadow-inner relative overflow-hidden"
          >
            <div
              class="absolute top-0 right-0 p-4 opacity-5 text-zinc-800 dark:text-white pointer-events-none"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-database"
                fill="none"
                height="60"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="60"
                xmlns="http://www.w3.org/2000/svg"
              >
                <ellipse
                  cx="12"
                  cy="5"
                  rx="9"
                  ry="3"
                />
                <path
                  d="M3 5V19A9 3 0 0 0 21 19V5"
                />
                <path
                  d="M3 12A9 3 0 0 0 21 12"
                />
              </svg>
            </div>
            <div
              class="space-y-2 relative z-10"
            >
              <label
                class="text-xs font-black uppercase tracking-wide text-amber-600 dark:text-amber-500 ml-1"
              >
                System Base Unit (Anchor)
              </label>
              <select
                class="h-12 w-full bg-card border-2 border-amber-500/30 rounded-md text-sm font-black font-mono tabular-nums text-amber-600 dark:text-amber-500"
              >
                <option
                  value="ml"
                >
                  ML
                </option>
                <option
                  value="L"
                >
                  L
                </option>
                <option
                  value="Gram"
                >
                  GRAM
                </option>
                <option
                  value="Kg"
                >
                  KG
                </option>
                <option
                  value="Pcs"
                >
                  PCS
                </option>
                <option
                  value="Unit"
                >
                  UNIT
                </option>
                <option
                  value="Sachet"
                >
                  SACHET
                </option>
                <option
                  value="Botol"
                >
                  BOTOL
                </option>
                <option
                  value="Dus"
                >
                  DUS
                </option>
                <option
                  value="Pack"
                >
                  PACK
                </option>
                <option
                  value="Karton"
                >
                  KARTON
                </option>
                <option
                  value="Can"
                >
                  CAN
                </option>
                <option
                  value="Zak"
                >
                  ZAK
                </option>
              </select>
            </div>
            <div
              class="space-y-2 relative z-10"
            >
              <label
                class="text-xs font-black uppercase tracking-wide text-zinc-500 dark:text-zinc-400 ml-1"
              >
                Safety Threshold (Min. Stock)
              </label>
              <div
                class="relative"
              >
                <div
                  class="w-full"
                >
                  <input
                    class="flex border dark:bg-zinc-800 px-4 py-2 text-sm shadow-sm transition-all placeholder:text-zinc-400 dark:placeholder:text-zinc-500 focus-visible:outline-none focus-visible:ring-4 focus-visible:ring-amber-500/20 disabled:cursor-not-allowed disabled:opacity-50 focus-visible:border-amber-500 h-12 w-full bg-card border-zinc-200 dark:border-zinc-700 rounded-md text-center font-mono tabular-nums text-amber-600 dark:text-amber-500"
                    type="number"
                    value="10"
                  />
                </div>
                <span
                  class="absolute right-4 top-1/2 -translate-y-1/2 text-xs font-black text-zinc-600 dark:text-zinc-300 bg-card px-2 py-1 rounded-md border border-zinc-300 dark:border-zinc-700 font-mono tabular-nums"
                >
                  Kg
                </span>
              </div>
            </div>
          </div>
          <div
            class="space-y-4"
          >
            <div
              class="flex items-center justify-between px-2"
            >
              <div
                class="flex items-center gap-4"
              >
                <div
                  class="h-px w-8 bg-zinc-300 dark:bg-zinc-800"
                />
                <label
                  class="text-xs font-black uppercase tracking-wide text-zinc-500 dark:text-zinc-400"
                >
                  Unit Conversions
                </label>
              </div>
              <button
                class="inline-flex items-center justify-center whitespace-nowrap tracking-widest duration-300 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-amber-500/20 disabled:pointer-events-none disabled:opacity-50 disabled:bg-zinc-200 dark:disabled:bg-zinc-700 active:scale-95 hover:text-zinc-900 dark:hover:text-white dark:hover:bg-white/5 h-8 px-4 text-xs font-black uppercase text-amber-600 dark:text-amber-400 hover:bg-amber-500/10 border border-amber-500/20 dark:border-amber-400/20 rounded-md transition-all"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-plus mr-2"
                  fill="none"
                  height="12"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M5 12h14"
                  />
                  <path
                    d="M12 5v14"
                  />
                </svg>
                 Define New Level
              </button>
            </div>
            <div
              class="max-h-[350px] overflow-y-auto pr-2 space-y-3 custom-scrollbar"
            >
              <div
                class="flex items-center gap-4 p-4 bg-card/40 rounded-md border border-zinc-200 dark:border-zinc-700 group hover:border-amber-500/20 transition-all"
              >
                <div
                  class="w-10 h-10 rounded-md bg-card flex items-center justify-center text-xs font-black text-zinc-500 dark:text-zinc-600 border border-zinc-200 dark:border-zinc-700 shadow-inner"
                >
                  L
                  1
                </div>
                <div
                  class="grid grid-cols-11 gap-4 flex-1 items-center"
                >
                  <div
                    class="col-span-3"
                  >
                    <select
                      class="w-full h-10 bg-card border border-zinc-300 dark:border-zinc-700 rounded-md px-4 text-xs font-black uppercase outline-none focus:ring-1 ring-amber-500"
                    >
                      <option
                        value="ml"
                      >
                        ml
                      </option>
                      <option
                        value="L"
                      >
                        L
                      </option>
                      <option
                        value="Gram"
                      >
                        Gram
                      </option>
                      <option
                        value="Kg"
                      >
                        Kg
                      </option>
                      <option
                        value="Pcs"
                      >
                        Pcs
                      </option>
                      <option
                        value="Unit"
                      >
                        Unit
                      </option>
                      <option
                        value="Sachet"
                      >
                        Sachet
                      </option>
                      <option
                        value="Botol"
                      >
                        Botol
                      </option>
                      <option
                        value="Dus"
                      >
                        Dus
                      </option>
                      <option
                        value="Pack"
                      >
                        Pack
                      </option>
                      <option
                        value="Karton"
                      >
                        Karton
                      </option>
                      <option
                        value="Can"
                      >
                        Can
                      </option>
                      <option
                        value="Zak"
                      >
                        Zak
                      </option>
                    </select>
                  </div>
                  <div
                    class="col-span-1 text-center font-black text-amber-500 text-xl"
                  >
                    =
                  </div>
                  <div
                    class="col-span-2"
                  >
                    <div
                      class="w-full"
                    >
                      <input
                        class="flex dark:bg-zinc-800 px-4 py-2 text-zinc-900 dark:text-zinc-100 shadow-sm transition-all placeholder:text-zinc-400 dark:placeholder:text-zinc-500 focus-visible:outline-none focus-visible:ring-4 focus-visible:ring-amber-500/20 disabled:cursor-not-allowed disabled:opacity-50 focus-visible:border-amber-500 h-10 w-full bg-card border border-zinc-300 dark:border-zinc-700 text-xs font-black text-center font-mono tabular-nums rounded-md focus:ring-1 ring-amber-500"
                        type="number"
                        value="25"
                      />
                    </div>
                  </div>
                  <div
                    class="col-span-3"
                  >
                    <select
                      class="w-full h-10 bg-card border border-zinc-300 dark:border-zinc-700 rounded-md px-4 text-xs font-black uppercase outline-none focus:ring-1 ring-amber-500"
                    >
                      <option
                        value="Kg"
                      >
                        KG
                         (BASE)
                      </option>
                      <option
                        value="ml"
                      >
                        ml
                      </option>
                      <option
                        value="L"
                      >
                        L
                      </option>
                      <option
                        value="Gram"
                      >
                        Gram
                      </option>
                      <option
                        value="Pcs"
                      >
                        Pcs
                      </option>
                      <option
                        value="Unit"
                      >
                        Unit
                      </option>
                      <option
                        value="Sachet"
                      >
                        Sachet
                      </option>
                      <option
                        value="Botol"
                      >
                        Botol
                      </option>
                      <option
                        value="Dus"
                      >
                        Dus
                      </option>
                      <option
                        value="Pack"
                      >
                        Pack
                      </option>
                      <option
                        value="Can"
                      >
                        Can
                      </option>
                      <option
                        value="Zak"
                      >
                        Zak
                      </option>
                    </select>
                  </div>
                  <div
                    class="col-span-2 text-right"
                  >
                    <p
                      class="text-xs font-black text-amber-600 dark:text-amber-500 font-mono tabular-nums"
                    >
                      25
                       
                      <span
                        class="text-xs text-zinc-700 dark:text-zinc-300 font-bold uppercase ml-1 px-2 py-0.5 bg-card rounded border border-zinc-300 dark:border-zinc-700 font-mono tabular-nums"
                      >
                        Kg
                      </span>
                    </p>
                  </div>
                </div>
                <button
                  class="h-10 w-10 flex items-center justify-center text-zinc-400 hover:text-rose-600 dark:text-rose-400 hover:bg-rose-50 dark:bg-rose-950/30 rounded-md transition-all"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-trash2 lucide-trash-2"
                    fill="none"
                    height="18"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M10 11v6"
                    />
                    <path
                      d="M14 11v6"
                    />
                    <path
                      d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6"
                    />
                    <path
                      d="M3 6h18"
                    />
                    <path
                      d="M8 6V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="col-span-4 bg-card/50 rounded-lg p-8 space-y-10 border border-zinc-200/80 dark:border-zinc-800/80 relative shadow-inner overflow-hidden"
        >
          <div
            class="absolute -bottom-10 -right-10 p-4 opacity-2 dark:opacity-4 text-zinc-800 dark:text-white rotate-12 scale-150 pointer-events-none"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-refresh-cw"
              fill="none"
              height="200"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="200"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3 12a9 9 0 0 1 9-9 9.75 9.75 0 0 1 6.74 2.74L21 8"
              />
              <path
                d="M21 3v5h-5"
              />
              <path
                d="M21 12a9 9 0 0 1-9 9 9.75 9.75 0 0 1-6.74-2.74L3 16"
              />
              <path
                d="M8 16H3v5"
              />
            </svg>
          </div>
          <div
            class="flex flex-col items-center text-center space-y-6 relative z-10"
          >
            <div
              class="w-32 h-32 bg-card rounded-lg border border-zinc-200 dark:border-zinc-700 flex items-center justify-center text-amber-500 shadow-xl group-hover:scale-105 transition-transform"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-box"
                fill="none"
                height="60"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="60"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M21 8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73l7 4a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16Z"
                />
                <path
                  d="m3.3 7 8.7 5 8.7-5"
                />
                <path
                  d="M12 22V12"
                />
              </svg>
            </div>
            <div
              class="space-y-2"
            >
              <h4
                class="text-2xl font-black uppercase tracking-tighter text-foreground"
              >
                Kopi Robusta
              </h4>
              <div
                class="flex items-center justify-center gap-2"
              >
                <div
                  class="w-1.5 h-1.5 rounded-full bg-amber-500 animate-pulse"
                />
                <p
                  class="text-xs font-black text-zinc-400 dark:text-zinc-500 uppercase tracking-wider"
                >
                  Bahan Baku
                </p>
              </div>
            </div>
          </div>
          <div
            class="p-6 bg-card rounded-lg border border-zinc-200 dark:border-zinc-700 space-y-6 relative z-10 shadow-sm"
          >
            <p
              class="text-xs font-black text-amber-600 dark:text-amber-500 uppercase tracking-wider"
            >
              Matrix Preview
            </p>
            <div
              class="space-y-4"
            >
              <div
                class="flex justify-between text-xs font-black"
              >
                <span
                  class="text-zinc-500 dark:text-zinc-400 uppercase tracking-widest italic"
                >
                  BASE SCALE
                </span>
                <span
                  class="text-foreground font-mono tabular-nums bg-card px-4 py-1 rounded-lg ring-1 ring-zinc-300 dark:ring-white/10"
                >
                  1 
                  Kg
                </span>
              </div>
              <div
                class="flex justify-between items-center text-xs font-black"
                style="animation-delay: 0ms;"
              >
                <span
                  class="text-zinc-500 dark:text-zinc-400 uppercase tracking-widest"
                >
                  1 
                  Karton
                </span>
                <div
                  class="flex items-center gap-2"
                >
                  <div
                    class="h-px w-6 bg-zinc-300 dark:bg-zinc-800"
                  />
                  <span
                    class="text-amber-600 dark:text-amber-500 font-mono tabular-nums bg-card px-4 py-1 rounded-lg ring-1 ring-amber-500/10"
                  >
                    25
                     
                    <span
                      class="text-xs text-zinc-500 dark:text-zinc-400 ml-1"
                    >
                      KG
                    </span>
                  </span>
                </div>
              </div>
            </div>
            <div
              class="pt-6 border-t border-zinc-300 dark:border-zinc-700"
            >
              <div
                class="flex justify-between items-end"
              >
                <div>
                  <p
                    class="text-xs font-black text-zinc-500 dark:text-zinc-400 uppercase mb-1"
                  >
                    Safety Margin
                  </p>
                  <p
                    class="text-lg font-black font-mono tabular-nums text-rose-600 dark:text-rose-400"
                  >
                    10
                     
                    <span
                      class="text-xs"
                    >
                      Kg
                    </span>
                  </p>
                </div>
                <svg
                  aria-hidden="true"
                  class="lucide lucide-truck text-zinc-500 dark:text-zinc-400"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M14 18V6a2 2 0 0 0-2-2H4a2 2 0 0 0-2 2v11a1 1 0 0 0 1 1h2"
                  />
                  <path
                    d="M15 18H9"
                  />
                  <path
                    d="M19 18h2a1 1 0 0 0 1-1v-3.65a1 1 0 0 0-.22-.624l-3.48-4.35A1 1 0 0 0 17.52 8H14"
                  />
                  <circle
                    cx="17"
                    cy="18"
                    r="2"
                  />
                  <circle
                    cx="7"
                    cy="18"
                    r="2"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            class="flex flex-col gap-4 relative z-10"
          >
            <button
              class="whitespace-nowrap transition-all duration-300 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-amber-500/20 disabled:pointer-events-none disabled:opacity-50 disabled:bg-zinc-200 dark:disabled:bg-zinc-700 dark:shadow-none hover:-translate-y-[2px] px-10 h-16 w-full bg-amber-500 text-white hover:bg-amber-600 dark:bg-amber-400 dark:text-zinc-900 dark:hover:bg-amber-500 font-black uppercase tracking-wider text-xs rounded-md shadow-lg dark:shadow-amber-400/10 flex items-center justify-center gap-2 active:scale-95"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-save group-hover:rotate-12 transition-transform"
                fill="none"
                height="20"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M15.2 3a2 2 0 0 1 1.4.6l3.8 3.8a2 2 0 0 1 .6 1.4V19a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2z"
                />
                <path
                  d="M17 21v-7a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v7"
                />
                <path
                  d="M7 3v4a1 1 0 0 0 1 1h7"
                />
              </svg>
              SAVE REGISTRY
            </button>
            <button
              class="inline-flex items-center justify-center whitespace-nowrap rounded-lg transition-all duration-300 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-amber-500/20 disabled:pointer-events-none disabled:opacity-50 disabled:bg-zinc-200 dark:disabled:bg-zinc-700 active:scale-95 hover:bg-zinc-100 dark:hover:bg-white/5 px-10 h-12 w-full font-black uppercase tracking-wider text-xs text-zinc-500 hover:text-zinc-900 dark:text-zinc-400 dark:hover:text-white"
            >
              Discard Change
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`InventoryFormModal — KEN Enterprise Compliance > matches snapshot (new material mode) 1`] = `
<div
  class="fixed inset-0 z-[100] flex items-center justify-center p-4 bg-zinc-950/80 backdrop-blur-md"
>
  <div
    class="transition-all text-[var(--text-primary)] w-full max-w-[1200px] max-h-[95vh] rounded-lg bg-card border border-zinc-200/80 dark:border-zinc-800/50 shadow-2xl flex flex-col animate-in fade-in zoom-in-95 duration-300"
  >
    <div
      class="flex items-center justify-between px-8 py-4 border-b border-zinc-200/80 dark:border-zinc-800/50 bg-card/80"
    >
      <div
        class="flex items-center gap-4"
      >
        <div
          class="flex h-10 w-10 items-center justify-center rounded-lg bg-amber-500 text-white dark:text-zinc-900 shadow-lg shadow-amber-500/20"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-package"
            fill="none"
            height="20"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11 21.73a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73z"
            />
            <path
              d="M12 22V12"
            />
            <polyline
              points="3.29 7 12 12 20.71 7"
            />
            <path
              d="m7.5 4.27 9 5.15"
            />
          </svg>
        </div>
        <div>
          <h3
            class="text-lg font-black uppercase tracking-tighter text-foreground"
          >
            Register New Material
          </h3>
          <p
            class="text-xs uppercase tracking-widest font-black text-amber-600 dark:text-amber-500"
          >
            Material definition & conversion matrix
          </p>
        </div>
      </div>
      <button
        class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium uppercase tracking-widest transition-all duration-300 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-amber-500/20 disabled:pointer-events-none disabled:opacity-50 disabled:bg-zinc-200 dark:disabled:bg-zinc-700 active:scale-95 h-8 w-8 rounded-full text-zinc-500 hover:text-zinc-900 dark:text-zinc-400 dark:hover:text-white hover:bg-zinc-100 dark:hover:bg-zinc-800"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-x"
          fill="none"
          height="20"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 6 6 18"
          />
          <path
            d="m6 6 12 12"
          />
        </svg>
      </button>
    </div>
    <div
      class="p-8 space-y-6 overflow-y-auto custom-scrollbar"
    >
      <div
        class="grid grid-cols-12 gap-8"
      >
        <div
          class="col-span-8 space-y-10"
        >
          <div
            class="grid grid-cols-3 gap-6"
          >
            <div
              class="space-y-2"
            >
              <label
                class="text-xs font-black uppercase tracking-wide text-zinc-500 dark:text-zinc-400 ml-1"
              >
                Nama Bahan *
              </label>
              <div
                class="w-full"
              >
                <input
                  class="flex w-full border dark:bg-zinc-800 px-4 py-2 text-sm font-sans dark:text-zinc-100 shadow-sm transition-all dark:placeholder:text-zinc-500 focus-visible:outline-none focus-visible:ring-4 focus-visible:ring-amber-500/20 disabled:cursor-not-allowed disabled:opacity-50 focus-visible:border-amber-500 h-12 bg-card border-zinc-200 dark:border-zinc-700 rounded-md text-foreground placeholder:text-zinc-400"
                  placeholder="Input name..."
                  value=""
                />
              </div>
            </div>
            <div
              class="space-y-2"
            >
              <label
                class="text-xs font-black uppercase tracking-wide text-zinc-500 dark:text-zinc-400 ml-1"
              >
                Kategori
              </label>
              <select
                class="h-12 w-full rounded-md border border-zinc-200 dark:border-zinc-700 bg-card px-4 text-xs font-black text-zinc-800 dark:text-zinc-200"
              >
                <option
                  value="Bahan Baku"
                >
                  Bahan Baku
                </option>
                <option
                  value="Minuman"
                >
                  Minuman
                </option>
                <option
                  value="Makanan"
                >
                  Makanan
                </option>
                <option
                  value="Kemasan"
                >
                  Kemasan
                </option>
                <option
                  value="Lainnya"
                >
                  Lainnya
                </option>
              </select>
            </div>
            <div
              class="space-y-2"
            >
              <label
                class="text-xs font-black uppercase tracking-wide text-amber-600 dark:text-amber-500 ml-1"
              >
                Pemasok Strategis
              </label>
              <select
                class="h-12 w-full rounded-md border border-zinc-200 dark:border-zinc-700 bg-card px-4 text-xs font-black text-zinc-800 dark:text-zinc-200"
              >
                <option
                  value=""
                >
                  Pilih Supplier...
                </option>
                <option
                  value="sup-1"
                >
                  PT Kopi Nusantara
                </option>
              </select>
            </div>
          </div>
          <div
            class="p-6 bg-card/40 rounded-lg border border-zinc-200/80 dark:border-zinc-800/80 shadow-inner relative overflow-hidden"
          >
            <div
              class="absolute top-0 right-0 p-4 opacity-5 text-zinc-800 dark:text-white pointer-events-none"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-database"
                fill="none"
                height="60"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="60"
                xmlns="http://www.w3.org/2000/svg"
              >
                <ellipse
                  cx="12"
                  cy="5"
                  rx="9"
                  ry="3"
                />
                <path
                  d="M3 5V19A9 3 0 0 0 21 19V5"
                />
                <path
                  d="M3 12A9 3 0 0 0 21 12"
                />
              </svg>
            </div>
            <div
              class="space-y-2 relative z-10"
            >
              <label
                class="text-xs font-black uppercase tracking-wide text-amber-600 dark:text-amber-500 ml-1"
              >
                System Base Unit (Anchor)
              </label>
              <select
                class="h-12 w-full bg-card border-2 border-amber-500/30 rounded-md text-sm font-black font-mono tabular-nums text-amber-600 dark:text-amber-500"
              >
                <option
                  value="ml"
                >
                  ML
                </option>
                <option
                  value="L"
                >
                  L
                </option>
                <option
                  value="Gram"
                >
                  GRAM
                </option>
                <option
                  value="Kg"
                >
                  KG
                </option>
                <option
                  value="Pcs"
                >
                  PCS
                </option>
                <option
                  value="Unit"
                >
                  UNIT
                </option>
                <option
                  value="Sachet"
                >
                  SACHET
                </option>
                <option
                  value="Botol"
                >
                  BOTOL
                </option>
                <option
                  value="Dus"
                >
                  DUS
                </option>
                <option
                  value="Pack"
                >
                  PACK
                </option>
                <option
                  value="Karton"
                >
                  KARTON
                </option>
                <option
                  value="Can"
                >
                  CAN
                </option>
                <option
                  value="Zak"
                >
                  ZAK
                </option>
              </select>
            </div>
            <div
              class="space-y-2 relative z-10"
            >
              <label
                class="text-xs font-black uppercase tracking-wide text-zinc-500 dark:text-zinc-400 ml-1"
              >
                Safety Threshold (Min. Stock)
              </label>
              <div
                class="relative"
              >
                <div
                  class="w-full"
                >
                  <input
                    class="flex border dark:bg-zinc-800 px-4 py-2 text-sm shadow-sm transition-all placeholder:text-zinc-400 dark:placeholder:text-zinc-500 focus-visible:outline-none focus-visible:ring-4 focus-visible:ring-amber-500/20 disabled:cursor-not-allowed disabled:opacity-50 focus-visible:border-amber-500 h-12 w-full bg-card border-zinc-200 dark:border-zinc-700 rounded-md text-center font-mono tabular-nums text-amber-600 dark:text-amber-500"
                    type="number"
                    value=""
                  />
                </div>
                <span
                  class="absolute right-4 top-1/2 -translate-y-1/2 text-xs font-black text-zinc-600 dark:text-zinc-300 bg-card px-2 py-1 rounded-md border border-zinc-300 dark:border-zinc-700 font-mono tabular-nums"
                >
                  ml
                </span>
              </div>
            </div>
          </div>
          <div
            class="space-y-4"
          >
            <div
              class="flex items-center justify-between px-2"
            >
              <div
                class="flex items-center gap-4"
              >
                <div
                  class="h-px w-8 bg-zinc-300 dark:bg-zinc-800"
                />
                <label
                  class="text-xs font-black uppercase tracking-wide text-zinc-500 dark:text-zinc-400"
                >
                  Unit Conversions
                </label>
              </div>
              <button
                class="inline-flex items-center justify-center whitespace-nowrap tracking-widest duration-300 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-amber-500/20 disabled:pointer-events-none disabled:opacity-50 disabled:bg-zinc-200 dark:disabled:bg-zinc-700 active:scale-95 hover:text-zinc-900 dark:hover:text-white dark:hover:bg-white/5 h-8 px-4 text-xs font-black uppercase text-amber-600 dark:text-amber-400 hover:bg-amber-500/10 border border-amber-500/20 dark:border-amber-400/20 rounded-md transition-all"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-plus mr-2"
                  fill="none"
                  height="12"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M5 12h14"
                  />
                  <path
                    d="M12 5v14"
                  />
                </svg>
                 Define New Level
              </button>
            </div>
            <div
              class="max-h-[350px] overflow-y-auto pr-2 space-y-3 custom-scrollbar"
            >
              <div
                class="py-12 text-center border-2 border-dashed border-zinc-200 dark:border-zinc-700 rounded-lg text-xs text-zinc-400 dark:text-zinc-600 font-black uppercase italic tracking-widest"
              >
                No packaging tiers defined
              </div>
            </div>
          </div>
        </div>
        <div
          class="col-span-4 bg-card/50 rounded-lg p-8 space-y-10 border border-zinc-200/80 dark:border-zinc-800/80 relative shadow-inner overflow-hidden"
        >
          <div
            class="absolute -bottom-10 -right-10 p-4 opacity-2 dark:opacity-4 text-zinc-800 dark:text-white rotate-12 scale-150 pointer-events-none"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-refresh-cw"
              fill="none"
              height="200"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="200"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3 12a9 9 0 0 1 9-9 9.75 9.75 0 0 1 6.74 2.74L21 8"
              />
              <path
                d="M21 3v5h-5"
              />
              <path
                d="M21 12a9 9 0 0 1-9 9 9.75 9.75 0 0 1-6.74-2.74L3 16"
              />
              <path
                d="M8 16H3v5"
              />
            </svg>
          </div>
          <div
            class="flex flex-col items-center text-center space-y-6 relative z-10"
          >
            <div
              class="w-32 h-32 bg-card rounded-lg border border-zinc-200 dark:border-zinc-700 flex items-center justify-center text-amber-500 shadow-xl group-hover:scale-105 transition-transform"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-box"
                fill="none"
                height="60"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="60"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M21 8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73l7 4a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16Z"
                />
                <path
                  d="m3.3 7 8.7 5 8.7-5"
                />
                <path
                  d="M12 22V12"
                />
              </svg>
            </div>
            <div
              class="space-y-2"
            >
              <h4
                class="text-2xl font-black uppercase tracking-tighter text-foreground"
              >
                REGISTERING...
              </h4>
              <div
                class="flex items-center justify-center gap-2"
              >
                <div
                  class="w-1.5 h-1.5 rounded-full bg-amber-500 animate-pulse"
                />
                <p
                  class="text-xs font-black text-zinc-400 dark:text-zinc-500 uppercase tracking-wider"
                >
                  Bahan Baku
                </p>
              </div>
            </div>
          </div>
          <div
            class="p-6 bg-card rounded-lg border border-zinc-200 dark:border-zinc-700 space-y-6 relative z-10 shadow-sm"
          >
            <p
              class="text-xs font-black text-amber-600 dark:text-amber-500 uppercase tracking-wider"
            >
              Matrix Preview
            </p>
            <div
              class="space-y-4"
            >
              <div
                class="flex justify-between text-xs font-black"
              >
                <span
                  class="text-zinc-500 dark:text-zinc-400 uppercase tracking-widest italic"
                >
                  BASE SCALE
                </span>
                <span
                  class="text-foreground font-mono tabular-nums bg-card px-4 py-1 rounded-lg ring-1 ring-zinc-300 dark:ring-white/10"
                >
                  1 
                  ml
                </span>
              </div>
            </div>
            <div
              class="pt-6 border-t border-zinc-300 dark:border-zinc-700"
            >
              <div
                class="flex justify-between items-end"
              >
                <div>
                  <p
                    class="text-xs font-black text-zinc-500 dark:text-zinc-400 uppercase mb-1"
                  >
                    Safety Margin
                  </p>
                  <p
                    class="text-lg font-black font-mono tabular-nums text-rose-600 dark:text-rose-400"
                  >
                    0
                     
                    <span
                      class="text-xs"
                    >
                      ml
                    </span>
                  </p>
                </div>
                <svg
                  aria-hidden="true"
                  class="lucide lucide-truck text-zinc-500 dark:text-zinc-400"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M14 18V6a2 2 0 0 0-2-2H4a2 2 0 0 0-2 2v11a1 1 0 0 0 1 1h2"
                  />
                  <path
                    d="M15 18H9"
                  />
                  <path
                    d="M19 18h2a1 1 0 0 0 1-1v-3.65a1 1 0 0 0-.22-.624l-3.48-4.35A1 1 0 0 0 17.52 8H14"
                  />
                  <circle
                    cx="17"
                    cy="18"
                    r="2"
                  />
                  <circle
                    cx="7"
                    cy="18"
                    r="2"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            class="flex flex-col gap-4 relative z-10"
          >
            <button
              class="whitespace-nowrap transition-all duration-300 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-amber-500/20 disabled:pointer-events-none disabled:opacity-50 disabled:bg-zinc-200 dark:disabled:bg-zinc-700 dark:shadow-none hover:-translate-y-[2px] px-10 h-16 w-full bg-amber-500 text-white hover:bg-amber-600 dark:bg-amber-400 dark:text-zinc-900 dark:hover:bg-amber-500 font-black uppercase tracking-wider text-xs rounded-md shadow-lg dark:shadow-amber-400/10 flex items-center justify-center gap-2 active:scale-95"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-save group-hover:rotate-12 transition-transform"
                fill="none"
                height="20"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M15.2 3a2 2 0 0 1 1.4.6l3.8 3.8a2 2 0 0 1 .6 1.4V19a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2z"
                />
                <path
                  d="M17 21v-7a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v7"
                />
                <path
                  d="M7 3v4a1 1 0 0 0 1 1h7"
                />
              </svg>
              INITIALIZE MATERIAL
            </button>
            <button
              class="inline-flex items-center justify-center whitespace-nowrap rounded-lg transition-all duration-300 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-amber-500/20 disabled:pointer-events-none disabled:opacity-50 disabled:bg-zinc-200 dark:disabled:bg-zinc-700 active:scale-95 hover:bg-zinc-100 dark:hover:bg-white/5 px-10 h-12 w-full font-black uppercase tracking-wider text-xs text-zinc-500 hover:text-zinc-900 dark:text-zinc-400 dark:hover:text-white"
            >
              Discard Change
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
